--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "@types/node": "*",
     "adminhq": "github:itsAnanth/adminhq",
     "cors": "^2.8.5",
+    "multer": "^1.4.4",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7"
   }
 }
