--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/node": "*",
     "adminhq": "github:itsAnanth/adminhq",
     "cors": "^2.8.5",
+    "express": "^4.17.3",
     "multer": "^1.4.4",
+    "node-fetch": "2.6.5",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
