--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/multer": "^1.4.7"
+    "@types/multer": "^1.4.7",
+    "@types/node-fetch": "^2.6.1"
   }
 }
